# cvm-reverse-proxy

./: .gitignore  .golangci.yaml  Dockerfile  LICENSE  Makefile  README.md  cvm-client-side-proxy.go  cvm-reverse-proxy.go  go.mod  go.sum  measurements-empty.json  measurements.json  proxy-client.dockerfile  proxy-server.dockerfile
.github/workflows/: checks.yml  release.yml
azure-tcbinfo-override/: override.go
cmd/attested-get/: main.go
cmd/dummy-server/: main.go
cmd/get-measurements/: main.go
cmd/proxy-client/: main.go
cmd/proxy-server/: issuer.go  main.go
common/: expected_measurements.go  expected_measurements_test.go  logging.go  vars.go
internal/: README.md
internal/api/attestationconfigapi/: BUILD.bazel  fetcher.go  fetcher_test.go  version.go  version_test.go
internal/api/attestationconfigapi/cli/: BUILD.bazel  compare.go  delete.go  main.go  upload.go  validargs.go
internal/api/attestationconfigapi/cli/client/: BUILD.bazel  client.go  client_test.go  reporter.go  reporter_test.go
internal/api/client/: BUILD.bazel  client.go
internal/api/fetcher/: BUILD.bazel  fetcher.go
internal/api/versionsapi/: BUILD.bazel  client.go  cliinfo.go  cliinfo_test.go  fetcher.go  fetcher_test.go  imageinfo.go  imageinfo_test.go  latest.go  latest_test.go  list.go  list_test.go  version.go  version_test.go
internal/atls/: BUILD.bazel  atls.go  atls_test.go
internal/attestation/: BUILD.bazel  attestation.go  attestation_test.go
internal/attestation/aws/: BUILD.bazel
internal/attestation/aws/nitrotpm/: BUILD.bazel  issuer.go  issuer_test.go  validator.go  validator_test.go
internal/attestation/aws/snp/: BUILD.bazel  issuer.go  issuer_test.go  validator.go  validator_test.go
internal/attestation/aws/snp/testdata/: BUILD.bazel
internal/attestation/azure/: BUILD.bazel  azure_test.go
internal/attestation/azure/snp/: BUILD.bazel  imds.go  issuer.go  issuer_test.go  validator.go  validator_test.go
internal/attestation/azure/tdx/: BUILD.bazel  issuer.go  issuer_test.go  tdx.go  validator.go
internal/attestation/azure/tdx/testdata/: BUILD.bazel
internal/attestation/azure/trustedlaunch/: BUILD.bazel  issuer.go  trustedlaunch_test.go  validator.go
internal/attestation/choose/: BUILD.bazel  choose.go  choose_test.go
internal/attestation/gcp/: BUILD.bazel  restclient.go
internal/attestation/gcp/es/: BUILD.bazel  issuer.go  issuer_test.go  validator.go  validator_test.go
internal/attestation/gcp/snp/: BUILD.bazel  issuer.go  validator.go
internal/attestation/idkeydigest/: BUILD.bazel
internal/attestation/initialize/: BUILD.bazel  initialize.go  initialize_test.go
internal/attestation/measurements/: BUILD.bazel  fetchmeasurements.go  fetchmeasurements_test.go  measurements.go  measurements_test.go  overrides.go
internal/attestation/measurements/measurement-generator/: BUILD.bazel  generate.go
internal/attestation/qemu/: BUILD.bazel  issuer.go  validator.go
internal/attestation/simulator/: BUILD.bazel
internal/attestation/snp/: BUILD.bazel  snp.go  snp_test.go
internal/attestation/snp/testdata/: BUILD.bazel
internal/attestation/tdx/: BUILD.bazel  issuer.go  tdx.go  validator.go
internal/attestation/variant/: BUILD.bazel  variant.go
internal/attestation/vtpm/: BUILD.bazel  attestation.go  attestation_test.go
internal/cloud/: BUILD.bazel
internal/cloud/aws/: BUILD.bazel  aws.go  aws_test.go
internal/cloud/azure/: BUILD.bazel  azure.go  azure_test.go  imds.go  imds_test.go  iptables_linux.go
internal/cloud/azureshared/: BUILD.bazel
internal/cloud/cloudprovider/: BUILD.bazel
internal/cloud/gcp/: BUILD.bazel  gcp.go  gcp_test.go
internal/cloud/gcpshared/: BUILD.bazel
internal/cloud/metadata/: BUILD.bazel  metadata.go
internal/cloud/openstack/: BUILD.bazel  api.go  api_test.go  imds.go  imds_test.go  openstack.go  (+1 more)
internal/compatibility/: BUILD.bazel
internal/config/: BUILD.bazel  attestation.go  attestation_test.go  attestationversion.go  attestationversion_test.go  aws.go  azure.go  config.go  config_test.go  gcp.go  validation.go  validation_test.go
internal/constants/: BUILD.bazel  constants.go
internal/constellation/: BUILD.bazel  apply.go  apply_test.go  applyinit.go  applyinit_test.go  helm.go  kubernetes.go  serviceaccount.go
internal/constellation/featureset/: BUILD.bazel
internal/containerimage/: BUILD.bazel
internal/crypto/: BUILD.bazel  crypto_test.go
internal/cryptsetup/: BUILD.bazel
internal/encoding/: BUILD.bazel
internal/file/: BUILD.bazel  file_test.go
internal/imagefetcher/: BUILD.bazel  imagefetcher.go  imagefetcher_test.go
internal/installer/: BUILD.bazel  installer.go  installer_test.go
internal/kms/kms/aws/: BUILD.bazel  aws.go
internal/kubernetes/: BUILD.bazel  configmaps.go
internal/license/: BUILD.bazel  checker_enterprise.go  checker_enterprise_test.go  checker_oss.go
internal/logger/: BUILD.bazel
internal/maa/: BUILD.bazel
internal/mpimage/: BUILD.bazel  uri.go
internal/nodestate/: BUILD.bazel  nodestate.go  nodestate_test.go
internal/osimage/: BUILD.bazel  osimage.go
internal/osimage/archive/: BUILD.bazel  archive.go
internal/osimage/imageinfo/: BUILD.bazel  imageinfo.go
internal/osimage/measurementsuploader/: BUILD.bazel  measurementsuploader.go
internal/osimage/nop/: BUILD.bazel  nop.go
internal/osimage/secureboot/: BUILD.bazel
internal/osimage/uplosi/: BUILD.bazel  uplosiupload.go
internal/retry/: BUILD.bazel
internal/role/: BUILD.bazel
internal/semver/: BUILD.bazel  semver.go
internal/sigstore/: BUILD.bazel
internal/staticupload/: BUILD.bazel  staticupload.go  staticupload_test.go
internal/validation/: BUILD.bazel
internal/verify/: BUILD.bazel  verify.go  verify_test.go
internal/versions/: BUILD.bazel  versions.go
multimeasurements/: multimeasurements.go  multimeasurements_test.go
proxy/: atls_config.go  mutli_validator.go  proxy.go  proxy_test.go
tdx/: issuer.go  remote_quote_provider.go  validator.go
(+94 files in other folders)
