load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "osimage",
    srcs = ["osimage.go"],
    importpath = "cvm-reverse-proxy/internal/osimage",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/api/versionsapi",
        "//internal/cloud/cloudprovider",
    ],
)
