load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//bazel/go:go_test.bzl", "go_test")

go_library(
    name = "attestationconfigapi",
    srcs = [
        "attestationconfigapi.go",
        "fetcher.go",
        "version.go",
    ],
    importpath = "cvm-reverse-proxy/internal/api/attestationconfigapi",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/api/fetcher",
        "//internal/attestation/variant",
        "//internal/constants",
        "//internal/sigstore",
    ],
)

go_test(
    name = "attestationconfigapi_test",
    srcs = [
        "fetcher_test.go",
        "version_test.go",
    ],
    embed = [":attestationconfigapi"],
    deps = [
        "//internal/attestation/variant",
        "//internal/constants",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
