load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "featureset",
    srcs = [
        "featureset.go",
        # keep
        "featureset_enterprise.go",
        # keep
        "featureset_oss.go",
    ],
    importpath = "cvm-reverse-proxy/internal/constellation/featureset",
    visibility = ["//cli:__subpackages__"],
)
