load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "uplosi",
    srcs = ["uplosiupload.go"],
    embedsrcs = ["uplosi.conf.in"],
    importpath = "cvm-reverse-proxy/internal/osimage/uplosi",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/api/versionsapi",
        "//internal/cloud/cloudprovider",
        "//internal/osimage",
        "@com_github_burntsushi_toml//:toml",
    ],
)
