load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "testdata",
    srcs = ["testdata.go"],
    embedsrcs = [
        "attestation.bin",
        "vcek.cert",
        "certchain.pem",
        "runtimedata.bin",
        "vcek.pem",
        "vlek.pem",
        "vlekcertchain.pem",
    ],
    importpath = "cvm-reverse-proxy/internal/attestation/snp/testdata",
    visibility = ["//:__subpackages__"],
)
