load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "aws",
    srcs = ["aws.go"],
    importpath = "cvm-reverse-proxy/internal/kms/kms/aws",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/kms/kms",
        "//internal/kms/kms/internal",
        "//internal/kms/uri",
        "@com_github_hashicorp_go_kms_wrapping_v2//:go-kms-wrapping",
        "@com_github_hashicorp_go_kms_wrapping_wrappers_awskms_v2//:awskms",
    ],
)
